--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -68,7 +68,7 @@ jobs:
 
         #python extract_ips.py
 
-        curl -L "http://www.饭太硬.com/tv" | grep -Pao "\*\*.*$" | sed 's/^\*\*//' | base64 --decode | jq '.'> fan.txt
+        curl -L "http://www.饭太硬.com/tv" | grep -Pao "\*\*.*$" | sed 's/^\*\*//' | base64 --decode | sed 's|^\s*//.*$||g' > fan.txt
 
     - name: Commit and push changes
       run: |
