--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -67,8 +67,12 @@ jobs:
         EOF
 
         #python extract_ips.py
-
-        curl -L "http://www.饭太硬.com/tv" | grep -Pao "\*\*.*$" | sed 's/^\*\*//' | base64 --decode | sed 's|^\s*//.*$||g' | jq '.' > fan.txt
+        
+        touch fan.txt.bak
+        curl -L "http://www.饭太硬.com/tv" | grep -Pao "\*\*.*$" | sed 's/^\*\*//' | base64 --decode | sed 's|^\s*//.*$||g' | jq '.' > fan.txt.bak
+        if grep -q "spider" fan.txt.bak; then
+          mv fan.txt.bak fan.txt
+        fi
 
     - name: Commit and push changes
       run: |
