--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -67,12 +67,15 @@ jobs:
         EOF
 
         #python extract_ips.py
-        
+
+        cat << 'EOF' > fetch_fan.sh
         touch fan.txt.bak
         curl -L "http://www.饭太硬.com/tv" | grep -Pao "\*\*.*$" | sed 's/^\*\*//' | base64 --decode | sed 's|^\s*//.*$||g' | jq '.' > fan.txt.bak
         if cat fan.txt.bak | grep -q "spider"; then
           mv fan.txt.bak fan.txt
         fi
+        EOF
+        bash fetch_fan.sh
 
     - name: Commit and push changes
       run: |
