--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -70,10 +70,7 @@ jobs:
 
         cat << 'EOF' > fetch_fan.sh
         touch fan.txt.bak
-        curl -L "http://www.饭太硬.com/tv" | grep -Pao "\*\*.*$" | sed 's/^\*\*//' | base64 --decode | sed 's|^\s*//.*$||g' | jq '.' > fan.txt.bak
-        if cat fan.txt.bak | grep -q "spider"; then
-          mv fan.txt.bak fan.txt
-        fi
+        curl -L "http://www.饭太硬.com/tv" | grep -Pao "\*\*.*$" | sed 's/^\*\*//' | base64 --decode | sed 's|^\s*//.*$||g' | jq '.' > fan.txt
         EOF
         bash fetch_fan.sh
 
