--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -66,7 +66,7 @@ jobs:
             main()
         EOF
 
-        #python extract_ips.py
+        python extract_ips.py
 
         cat << 'EOF' > fetch_fan.sh
         touch fan.txt.bak
